<resources>
    <string name="app_name">Million Planets</string>
    <string name="million_planets">Million Planets</string>
    <string name="space_mmo">space MMO</string>
    <string name="start_game">New Game</string>
    <string name="continue_game">Continue</string>
    <string name="exit">Exit</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="go_to_space">Go to Space</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="enter_player_name">Enter your nickname</string>
    <string name="enter_player_email">Enter your email</string>
    <string name="male_gender">Male</string>
    <string name="female_gender">Female</string>
    <string name="enter_player_password">Enter your password</string>

    <string name="user_coordinates">Coordinates: </string>
    <string name="user_ship">Ship: </string>
    <string name="user_hp">Hp: </string>
    <string name="user_shield">Shield: </string>
    <string name="user_cargo">Cargo: </string>
    <string name="user_scanner_capacity">Scanner: </string>
    <string name="user_fuel">Fuel: </string>
    <string name="user_money">Money: </string>

    <string name="scan">Scan</string>
    <string name="fight_with">Fight with %1$s</string>
    <string name="fight">Fight</string>
    <string name="trade">Trade</string>
    <string name="jump">Jump</string>
    <string name="land">Land</string>
    <string name="get_fuel">Get Fuel</string>
    <string name="mine">Mine</string>
    <string name="sos">Sos</string>
    <string name="inventory">Inventory</string>
    <string name="mark">Mark</string>
    <string name="call_tanker">Call</string>

    <string name="user_type">User</string>
    <string name="planet_type">Planet</string>
    <string name="fuel_type">Fuel</string>

    <string name="user_cash">Cash: </string>
    <string name="user_bank">Bank: </string>

    //Fight
    <string name="retreat">Retreat</string>
    <string name="leave">Leave</string>
    <string name="ship">Ship</string>
    <string name="hp">Hp</string>
    <string name="shield">Shield</string>
    <string name="weapon">Weapon</string>

    //Inventory
    <string name="cargo">Cargo</string>
    <string name="arming">Arming</string>
    <string name="inventory_fuel_can_not_be_refilled">Fuel can not be refilled</string>


    //Planet
    <string name="planet_class">Class: </string>
    <string name="planet_size">Size: </string>
    <string name="planet_sectors">Sectors: </string>
    <string name="planet_market">Market </string>
    <string name="planet_sectors_button">Sectors </string>
    <string name="planet_take_off">Take Off </string>
    <string name="planet_shipyard">Shipyard</string>
    <string name="planet_modules">Modules</string>

    //Shipyard
    <string name="shipyard_weapon_slots">Weapon Slots: </string>
    <string name="shipyard_cost">Cost: </string>
    <string name="shipyard_your_ship">Your Ship: </string>
    <string name="shipyard_caution">Your ship will be sold at half price.</string>
    <string name="shipyard_jump">Jump: </string>
    <string name="shipyard_buy">Buy</string>
    <string name="shipyard_ships">Ships</string>
    <string name="research_spaceship">Research Spaceship</string>
    <string name="trader">Trader</string>
    <string name="fighter">Fighter</string>


    //Market
    <string name="market_you">You</string>
    <string name="market_resource">Resource</string>
    <string name="market_price">Price</string>
    <string name="market_qnt">Qnt</string>

    //Sectors
    <string name="sectors">Sectors</string>
    <string name="sectors_action_get">Get</string>
    <string name="sectors_action_sell">Sell</string>
    <string name="sectors_action_one_sector">1 sector</string>
    <string name="sectors_action_two_sectors">2 sectors</string>
    <string name="sectors_no_money_to_buy_sectors">You don\'t have enough money to buy 2 sectors! Come next time</string>
    <string name="sectors_you_bought_sector">Congratulations! You bought 1 sector! Come later to farm!</string>
    <string name="sectors_you_sold_sectors">You have sold your sectors</string>
    <string name="sectors_amount">Sectors: %1$d</string>

    //Mine
    <string name="mine_stop">Stop</string>

    <string name="egg">GREAT! +1 for Scanner Capacity</string>
    <string name="run_out_of_eggs">You are pretty enough!!</string>

    <string name="undefined">Undefined</string>
    <string name="current_coordinate">X:%1d Y:%2d</string>
    <string name="title_activity_move">MoveActivity</string>
    <string name="title_activity_market">Market</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="first_tab">Sell</string>
    <string name="second_tab">Buy</string>

    //Modules
    <string name="modules_list_header">Modules</string>
    <string name="modules_list_weapons">Weapons</string>
    <string name="modules_list_shields">Shields</string>
    <string name="modules_list_drives">Drives</string>
    <string name="modules_list_scanners">Scanners</string>
    <string name="modules_list_special">Special</string>
    <string name="modules_empty_slots">Empty Slots: </string>
    <string name="modules_weapon_slots">Weapon</string>
    <string name="modules_your_weapon">Your weapons: </string>
    <!-- <string name="modules_template_modules_name_slots">%1s (%2d )</string>-->


    //ModulesList
    <string name="modules_list_light_laser">Light Laser</string>
    <string name="modules_list_medium_laser">Medium Laser</string>
    <string name="modules_list_heavy_laser">Heavy Laser</string>
    <string name="modules_list_military_laser">Military Laser</string>
    <string name="modules_list_heavy_military_laser">Heavy Military Laser</string>

    //ModulesInfo
    <string name="modules_info_class">Class: </string>
    <string name="modules_info_damage_hp">Damage HP: </string>
    <string name="modules_info_damage_shield">Damage Shield: </string>
    <string name="modules_info_slot">Slots Required: </string>
    <string name="modules_info_cost">Cost: </string>
    <string name="modules_info_you_have">You have: </string>
    <string name="run_out_of_fuel">You are run out of fuel! Please, call the tanker.</string>
    <string name="not_enough_fuel_to_get_to_destination">Not enough fuel to get to the destination. Please, call the tanker</string>
    <string name="modules_info_not_enough_money">You have not enough money</string>
    <string name="modules_info_item_was_bought_successfully">The item was successfully bought</string>
    <string name="modules_info_item_was_sold_successfully">The item was successfully sold</string>

    //Error
    <string name="error_general">An error occurred. Please, try again</string>

    //Registration
    <string name="registration_nickname_must_at_least_3_characters_long">Your nickname must be at least 3 characters long</string>
    <string name="registration_password_must_at_least_6_characters_long">Your password must be at least 6 characters long</string>
    <string name="registration_enter_email">Enter your email to continue registration</string>
    <string name="registration_email_is_occupied">The email is already occupied</string>
    <string name="registration_email_is_invalid">The email is invalid</string>
    <string name="registration_is_failed">Registration is failed. Please, try later</string>

    //Main
    <string name="main_authentication_is_failed">Authentication failed</string>
    <string name="main_welcome_on_board">Welcome on board, %1$s!</string>
    <string name="main_cargo_is_overloaded">Cargo is overloaded! Please, drop extra items through Inventory</string>

    //Gate
    <string name="gate_not_enough_money_to_buy_fuel">Not enough money to buy fuel!</string>
    <string name="gate_mine_failed">Fail :( Try again. Total: %1$d</string>
    <string name="gate_cargo_capacity_is_full">Your cargo capacity is full! Sell your items on the market or drop them via inventory</string>
    <string name="gate_debris_is_empty">Debris is empty and is not available anymore</string>
    <string name="gate_you_got_item">You got %1$d iron. Total: %2$d</string>

</resources>
